# HPGe_Geant4

./: .gitignore  AGENTS.md  CMakeLists.txt  G4History.macro  HPGeSingle.cc  gamma_spectrum.root  geant4_root_output_spec.txt  geom_check.mac  gui.mac  requirements.txt  run.mac  track_vis.mac
.claude/docs/: context.md  lead-shield-plan.md  ml-data-pipeline-plan.md
include/: DetectorConstruction.hh  EventAction.hh  IsotopeDecay.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
isotope_data/: Ac206.json  Ac206m.json  Ac206m2.json  Ac207.json  Ac208.json  Ac208m.json  Ac209.json  Ac210.json  Ac211.json  Ac212.json  Ac213.json  Ac214.json  Ac215.json  Ac216.json  Ac216m.json  Ac217.json  Ac217m.json  Ac217m2.json  Ac217m3.json  Ac218.json  Ac219.json  Ac220.json  Ac221.json  Ac222.json  Ac222m.json  Ac222m2.json  Ac223.json  Ac224.json  Ac225.json  Ac226.json  Ac227.json  Ac228.json  Ac229.json  Ac230.json  Ac231.json  Ac232.json  Ac233.json  Ac234.json  Ac235.json  Ag100.json  (+4034 more)
ml_pipeline/: __init__.py  build_dataset.py  build_features.py  io.py  smearing.py
ml_pipeline/features/: __init__.py  peak_finder.py  spectral_features.py
src/: DetectorConstruction.cc  EventAction.cc  IsotopeDecay.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
